--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"skeleton-css": "^2.0.4"
+		"skeleton-css": "^2.0.4",
+		"svelte-routing": "^2.12.0"
 	}
 }
